# convergio-reports

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json  tarpaulin-report.json
.github/workflows/: ci.yml
crates/convergio-reports/: Cargo.toml
crates/convergio-reports/src/: engine.rs  engine_research.rs  ext.rs  latex.rs  lib.rs  mcp_defs.rs  pdf_compiler.rs  routes.rs  template.rs  types.rs
docs/adr/: 001-extraction.md  ADR-036-ctt-report-service.md
