[package]
name = "convergio-reports"
description = "Convergio Think Tank — professional research report generation service"
version = "0.1.3"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "test-util"] }
